# workahub-platform

./: .gitignore  .gitmodules  README.md
workahub_app/: .gitignore  README.md  flutter_rust_bridge.yaml  pubspec.yaml
workahub_app/lib/: main.dart
workahub_app/lib/src/flatbuffers/: monitoring_workahub.monitoring_generated.dart
workahub_app/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
workahub_app/lib/src/rust/api/: auth.dart  db.dart  media.dart  monitor.dart  sync.dart
workahub_app/lib/src/screens/: dashboard_screen.dart  login_screen.dart
workahub_app/lib/src/utils/: tray_manager.dart
workahub_app/rust/: Cargo.toml
workahub_app/rust/src/: frb_generated.rs  lib.rs
workahub_app/rust/src/api/: auth.rs  db.rs  media.rs  mod.rs  monitor.rs  simple.rs  sync.rs
workahub_app/rust/src/schema/: mod.rs  monitoring_generated.rs
workahub_app/schema/: monitoring.fbs
workahub_app/test/: widget_test.dart
