[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
screenshots = "0.8"
rdev = "0.5"
aws-sdk-s3 = "1.17"
aws-config = "1.1.7"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
log = "0.4"
base64 = "0.21"
directories = "5.0"
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
image = "0.24"
lazy_static = "1.5.0"
aws-credential-types = "1.2.11"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
gstreamer-gl = "0.24.4"
flatbuffers = "25.12.19"
